2002-10-29  Jim Davidson <jgdavidson@aol.com>

	* sample-config.tcl:  Updated with examples for connection
	thread pools and Host header virtual servers.

	* Makefile:  Uses /bin/sh to invoke install-doc.

	* doc/install-doc:  Uses /bin/sh to invoke mkLinks.

	* nsd/form.c:
	* nsd/conn.c:
	* tcl/form.tcl:  Changed "ns_conn files" command to just
	return names of file upload widgets, moving access to other
	meta data to new fileoffset, filelength, and fileheaders
	subcommands. Also, removed the ns_conn string command
	instead of updating.

	* nsd/nsd.h:
	* nsd/driver.c:
	* nsd/nsmain.c:
	* nsd/server.c:
	* nsd/queue.c:  Implemented multiple named thread pools
	for virtual servers and Host header based virtual server
	selection.  See sample-config.tcl for config example.

	* nsd/info.c: Fixed crash bug with NULL server.

	* nsd/tclcmds.c: Removed NsTclConnCmd and NsTclServerCmd string commands.


2002-10-14  Jim Davidson <jgdavidson@aol.com>

	* doc/install-doc (new):  New script to install and cross
	link the man pages.

	* Makefile:
	* include/Makefile.module:  Added .PHONY targets and man
	page install target.

	* nsd/conn.c:  Made "ns_conn copy" use Tcl_Write instead
	of Tcl_WriteChars to fix binary file upload bug.

	* nsd/form.c:  Fixed bug where Ns_ConnGetQuery (i.e.,
	ns_conn form) could not handle binary data in multpart file
	uploads.  Also, "ns_conn files" now returns file type.
	
	* nsd/log.c:  Thread ids are now formatted as unsigned
	long.

	* include/ns.h:
	* nsd/config.c:
	* nsd/tclinit.c:
	* nsd/tclcmd.c:
	* nsd/tclsock.c:
	* nsd/main.c:  Added support for libnsd.so to be loaded
	into a standard (thread enabled) tclsh or linked into a
	custom tclsh.  Calling Ns_TclInit from a custom tclsh or
	loading libnsd.so via the load command will add many
	non-server AOLserver commands (e.g., adds ns_set but not
	ns_adp_puts).

	* nsd/server.c:
	* nsd/tcljob.c:  Changed ns_job command to create and queue
	jobs to named queues instead of per-server queues.
